--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 h1 {
-   font-family: "Noto Sans JP", sans-serif;
+   font-family:  "Josefin Sans", sans-serif;
    font-size: 2rem;
    letter-spacing: 1.2em;
    text-shadow: 2px 2px 5px yellow;
@@ -29,3 +29,4 @@ body {
 #basic p {
    font-weight: bold;
 }
+
