--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -8,6 +8,9 @@ p {
    display: inline-block;
    width: 20%;
    background-color: #ffd9df;
+   margin: 10px 0;
+   padding: 5px 0;
+   box-sizing: border-box;
 }
 
 #middle {
@@ -22,7 +25,7 @@ p {
    position: absolute;
    width: 200px;
    height: 200px;
-   background-color: #87ceed;
+   background-color: #87ceeb;
    top: 100px;
    left: 100px;
 }
@@ -32,7 +35,7 @@ p {
    height: 200px;
    top: 300px;
    left: 300px;
-   background-color: #87ceed;
+   background-color: #87ceeb;
 }
 #middle-child03 {
    position: absolute;
@@ -40,7 +43,7 @@ p {
    height: 200px;
    top: 500px;
    left: 500px;
-   background-color: #87ceed;
+   background-color: #87ceeb;
 }
 
 #bottom {
@@ -49,26 +52,27 @@ p {
    height: 300px;
    margin: 20px auto;
    text-align: center;
-   background-color: #87ceed;
+   background-color: #87ceeb;
 }
+#bottom div {
+   width: 400px;
+   height: 100px;
+   background-color: #e5dcf0;
+}
+
 #bottom-child01 {
-   position: absolute;
-   width: 400px;
-   height: 100px;
-   background-color: #e5dcf0;
+   position: relative;
+   left: 0;
 }
+
 #bottom-child02 {
-   position: absolute;
-   width: 400px;
-   height: 100px;
+   position: relative;
    left: 200px;
-   top: calc(100% / 3);
-   background-color: #e5dcf0;
-}#bottom-child03 {
-   position: absolute;
-   width: 400px;
-   height: 100px;
-   left: 400px;
-   top: calc(100% *2/ 3);
-   background-color: #e5dcf0;
 }
+
+#bottom-child03 {
+   position: relative;
+   left: 400px;
+}
+
+
