--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -21,29 +21,23 @@ p {
    text-align: center;
    background-color: #ffd9df;
 }
-#middle-child01 {
+#middle div {
    position: absolute;
    width: 200px;
    height: 200px;
    background-color: #87ceeb;
+}
+#middle-child01 {
    top: 100px;
    left: 100px;
 }
 #middle-child02 {
-   position: relative;
-   width: 200px;
-   height: 200px;
    top: 300px;
    left: 300px;
-   background-color: #87ceeb;
 }
 #middle-child03 {
-   position: absolute;
-   width: 200px;
-   height: 200px;
    top: 500px;
    left: 500px;
-   background-color: #87ceeb;
 }
 
 #bottom {
@@ -74,5 +68,6 @@ p {
    position: relative;
    left: 400px;
 }
+
 
 
